<resources>

    <string name="app_name">CraftTips</string>
    <!-- TextView -->
    <string name="tip">分类搜索请输入下方对应数字:</string>
    
    <!-- TextView -->
    <string name="tip_show_01">红石 11 食物 12 照明 13 装饰 14</string>
	
    <!-- TextView -->
    <string name="tip_show_02">工具 21 战斗 22 炼药 23 专业 24</string>
    
    <!-- Button -->
    <string name="help">帮助!</string>
    
    <!-- AutoCompleteTextView -->
    <string name="autohint">请输入物品的简拼来搜索~</string>    
    <string name="autoblow">我用双手成就自己的梦想~</string>
    
    <!-- 物品图片不能显示时，显示的文字 -->
    <string name="kong"></string>
    
    <!-- help.xml -->
    <string name="help_title">帮    助</string>
    
    <string name="help_context_01">使用方法：</string>
    <string name="help_context_02">1、全部搜索：输入你想要搜索的物品的简拼即可，如：西瓜种子，输入xgzz即可</string>
    <string name="help_context_03">2、分类搜索：输入种类符号（种类符号定义在搜索框上面一行）即可看到该种类的所有物品</string>
    
</resources>
