<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/main_background" >
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_title"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/context_01"/>

    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_context_01"
        android:textColor="@color/context_01"
        android:layout_marginTop="@dimen/context_between"/>
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_context_02"
        android:textColor="@color/context_02"
        android:layout_marginTop="@dimen/context_between"/>
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_context_03"
        android:textColor="@color/context_03"
        android:layout_marginTop="@dimen/context_between"/>
</LinearLayout>