<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/main_background" >

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <LinearLayout 
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:orientation="vertical">
        
        	<TextView 
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text="@string/tip"
            	android:textColor="@color/context_01"/>
        
        	<TextView 
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text="@string/tip_show_01"
            	android:textColor="@color/context_02"/>
        
        	<TextView 
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text="@string/tip_show_02"
            	android:textColor="@color/context_03"/>
    	</LinearLayout>
    
        <Button
            android:id="@+id/help" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help"
            android:layout_marginLeft="@dimen/help_btn_margin_left"/>
    </LinearLayout>
    
    
    <AutoCompleteTextView 
        android:id="@+id/auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:completionThreshold="1"
        android:completionHint="@string/autoblow"
        android:hint="@string/autohint"/>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal" >
        <!-- Pic11 -->
        <ImageView 
            android:id="@+id/pic11"
            android:layout_width="@dimen/picture_size"
            android:layout_height="@dimen/picture_size"
            android:src="@drawable/kong"
            android:contentDescription="@string/kong"/>
        <!-- Pic12 -->
        <ImageView 
            android:id="@+id/pic12"
            android:layout_width="@dimen/picture_size"
            android:layout_height="@dimen/picture_size"
            android:src="@drawable/kong"
            android:contentDescription="@string/kong"/>
        <!-- Pic13 -->
        <ImageView 
            android:id="@+id/pic13"
            android:layout_width="@dimen/picture_size"
            android:layout_height="@dimen/picture_size"
            android:src="@drawable/kong"
            android:contentDescription="@string/kong"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal" >
        
        <!-- Pic21 -->
        <ImageView 
            android:id="@+id/pic21"
            android:layout_width="@dimen/picture_size"
            android:layout_height="@dimen/picture_size"
            android:src="@drawable/kong"
            android:contentDescription="@string/kong"/>
        <!-- Pic22 -->
        <ImageView 
            android:id="@+id/pic22"
            android:layout_width="@dimen/picture_size"
            android:layout_height="@dimen/picture_size"
            android:src="@drawable/kong"
            android:contentDescription="@string/kong"/>
        <!-- Pic23 -->
        <ImageView 
            android:id="@+id/pic23"
            android:layout_width="@dimen/picture_size"
            android:layout_height="@dimen/picture_size"
            android:src="@drawable/kong"
            android:contentDescription="@string/kong"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal" >
        
        <!-- Pic31 -->
        <ImageView 
            android:id="@+id/pic31"
            android:layout_width="@dimen/picture_size"
            android:layout_height="@dimen/picture_size"
            android:src="@drawable/kong"
            android:contentDescription="@string/kong"/>
        <!-- Pic32 -->
        <ImageView 
            android:id="@+id/pic32"
            android:layout_width="@dimen/picture_size"
            android:layout_height="@dimen/picture_size"
            android:src="@drawable/kong"
            android:contentDescription="@string/kong"/>
        <!-- Pic33 -->
        <ImageView 
            android:id="@+id/pic33"
            android:layout_width="@dimen/picture_size"
            android:layout_height="@dimen/picture_size"
            android:src="@drawable/kong"
            android:contentDescription="@string/kong"/>
    </LinearLayout>

</LinearLayout>